name:                git-utils
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ki11men0w/haskell-git-utils#readme
license:             BSD3
license-file:        LICENSE
author:              Maksim Golubev
maintainer:          maksim.golubev72@gmail.com
copyright:           2017 Maksim Golubev
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     GitCommits
  build-depends:       base >= 4.7 && < 5
                     , process
                     , attoparsec >= 0.13.1.0
                     , bytestring >= 0.10.8.1
                     , containers >= 0.5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ki11men0w/haskell-git-utils
